[gd_scene load_steps=6 format=3 uid="uid://bo0rqdo7shdg5"]

[ext_resource type="Script" path="res://project_screen.gd" id="1_g1q2c"]
[ext_resource type="PackedScene" uid="uid://de4wbolycij03" path="res://flow.tscn" id="2_v7728"]
[ext_resource type="PackedScene" uid="uid://cu8xt2xvv87ue" path="res://action_edit.tscn" id="3_88v0h"]
[ext_resource type="Script" path="res://Info.gd" id="4_jv6i4"]
[ext_resource type="PackedScene" uid="uid://gxj4qnbydl1l" path="res://flowchart_edit.tscn" id="4_qsp4d"]

[node name="ProjectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1q2c")
flow = ExtResource("2_v7728")
actionEdit = ExtResource("3_88v0h")
flowEdit = ExtResource("4_qsp4d")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
script = ExtResource("4_jv6i4")

[node name="InfoContainer" type="TabContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
drag_to_rearrange_enabled = true

[node name="Project Info" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="GameName" type="Label" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info"]
layout_mode = 2
text = "Game Name
"

[node name="GameNameEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info"]
layout_mode = 2

[node name="ProjectName" type="Label" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info"]
layout_mode = 2
text = "Workspace Name"

[node name="ProjectNameEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info"]
layout_mode = 2

[node name="Starting" type="HBoxContainer" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info/Starting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info/Starting/VBoxContainer"]
layout_mode = 2
text = "Starting Flowchart"

[node name="OptionButton" type="OptionButton" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info/Starting/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info/Starting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info/Starting/VBoxContainer2"]
layout_mode = 2
text = "Starting Cell"

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer/InfoContainer/Project Info/Starting/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Actions" type="ScrollContainer" parent="HSplitContainer/VBoxContainer/InfoContainer"]
visible = false
layout_mode = 2

[node name="Actions" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/InfoContainer/Actions"]
layout_mode = 2

[node name="Flowcharts" type="ScrollContainer" parent="HSplitContainer/VBoxContainer/InfoContainer"]
visible = false
layout_mode = 2

[node name="Flowcharts" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/InfoContainer/Flowcharts"]
layout_mode = 2

[node name="Filter" type="LineEdit" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Filter"

[node name="FlowContainers" type="TabContainer" parent="HSplitContainer"]
layout_mode = 2
drag_to_rearrange_enabled = true

[node name="Create New Flowchart" type="HBoxContainer" parent="HSplitContainer/FlowContainers"]
layout_mode = 2

[node name="main" type="VBoxContainer" parent="HSplitContainer/FlowContainers/Create New Flowchart"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HSplitContainer/FlowContainers/Create New Flowchart/main"]
layout_mode = 2
text = "Paste from FlowchartMain"
horizontal_alignment = 1

[node name="CodeEdit" type="CodeEdit" parent="HSplitContainer/FlowContainers/Create New Flowchart/main"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Paste Valid FlowchartMain

(will erase if invalid)"

[node name="code" type="VBoxContainer" parent="HSplitContainer/FlowContainers/Create New Flowchart"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HSplitContainer/FlowContainers/Create New Flowchart/code"]
layout_mode = 2
text = "Paste from FlowchartCode"
horizontal_alignment = 1

[node name="CodeEdit" type="CodeEdit" parent="HSplitContainer/FlowContainers/Create New Flowchart/code"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Paste Valid FlowchartCode

(will erase if invalid)"

[connection signal="dragged" from="HSplitContainer" to="." method="_on_h_split_container_dragged"]
[connection signal="text_changed" from="HSplitContainer/VBoxContainer/Filter" to="HSplitContainer/VBoxContainer" method="_on_filter_text_changed"]
[connection signal="text_changed" from="HSplitContainer/FlowContainers/Create New Flowchart/main/CodeEdit" to="." method="_on_code_edit_text_changed"]
[connection signal="text_changed" from="HSplitContainer/FlowContainers/Create New Flowchart/code/CodeEdit" to="." method="_on_code_edit_text_changed"]
